--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Front-end Mentor | Social proof</title>
 </head>
 <body>
-    <!-- <div class="img-background"></div> -->
+    <div class="img-background"></div>
     <main>
         <!-- <div class="principal-content"> -->
         <section class="block1">
@@ -96,5 +96,8 @@
         <!-- </div> -->
         
     </main>
+    <footer class="footer">
+        <p class="footer-links">Tomás A. Almanzar Es. 2022 | <a class="link linkedin" href="https://www.linkedin.com/in/tomas-espinal4/" target="_blank">Linkedin</a><a class="link github" href="https://github.com/txmasito/social_proof.git" target="_blank">Github</a></p>
+    </footer>
 </body>
 </html>
